tests/neg-custom-args/captures/real-try.check
-- [E190] Potential Issue Warning: tests/neg-custom-args/captures/real-try.scala:36:4 ----------------------------------
36 |  b.x
   |  ^^^
   |  Discarded non-Unit value of type () -> Unit. You may want to use `()`.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/real-try.scala:19:4 --------------------------------------
19 |    () => foo(1)  // error
   |    ^^^^^^^^^^^^
   |    Found:    () => Unit
   |    Required: () ->? Unit
   |
   |    Note that reference (cap : caps.Cap), defined at level 2
   |    cannot be included in outer capture set ?, defined at level 1 in method test
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/real-try.scala:25:4 --------------------------------------
25 |    () => Cell(foo(1))  // error
   |    ^^^^^^^^^^^^^^^^^^
   |    Found:    () => Cell[Unit]^?
   |    Required: () ->? Cell[Unit]^?
   |
   |    Note that reference (cap : caps.Cap), defined at level 2
   |    cannot be included in outer capture set ?, defined at level 1 in method test
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/real-try.scala:31:4 --------------------------------------
31 |    Cell(() => foo(1))// // error
   |    ^^^^^^^^^^^^^^^^^^
   |    Found:    Cell[box () => Unit]^?
   |    Required: Cell[() ->? Unit]^?
   |
   |    Note that reference (cap : caps.Cap), defined at level 2
   |    cannot be included in outer capture set ?, defined at level 1 in method test
   |
   | longer explanation available when compiling with `-explain`
